# QoLA

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
example/: manifest.toml  te-manifest.toml
patches/aiter/: 0001-jit-gpu-targets-and-config.patch  0002-hsa-only-aiter-hip-common.patch
qola/: __init__.py  cli.py
qola/build_tools/: __init__.py  builder.py  config.py  generate_embedded_hsa.py  resolver.py  submodule.py  variant_matrix.py
qola/cpp_itfs/: gemm_a4w4_asm.cu  gemm_a4w4_blockscale.cu  gemm_a4w4_blockscale.h  gen_blockscale_instances.py  qola_common.h  qola_exports.lds  qola_gemm_a4w4_asm.cu  qola_gemm_a4w4_asm.h  qola_gemm_a4w4_blockscale.cu  qola_gemm_a4w4_blockscale_common.cuh  qola_mha_bwd.cu  qola_mha_bwd.h  qola_mha_fwd.cu  qola_mha_fwd.h  registry.toml
qola/cpp_itfs/torch_stubs/ATen/: ATen.h
qola/cpp_itfs/torch_stubs/ATen/hip/: HIPContext.h
qola/cpp_itfs/torch_stubs/ATen/hip/impl/: HIPGuardImplMasqueradingAsCUDA.h  HIPStreamMasqueradingAsCUDA.h
qola/cpp_itfs/torch_stubs/torch/: all.h  extension.h
qola/dispatch/: __init__.py  gemm_a4w4_asm.py  gemm_a4w4_blockscale.py
